--- a/scss/_Handouts.scss
+++ b/scss/_Handouts.scss
@@ -9,11 +9,11 @@
 &_title{
     margin: 20px 0px 0px 40px;
     position: static; 
-    z-index: 1; 
+    z-index: -1; 
 
     >h1{
         font-family: 'Gilroy', sans-serif;
-        font-size: 100px;
+        font-size: 90px;
         color: $spanish_viridians;
         
        }   
@@ -29,7 +29,6 @@
    
 }
   &_container{
-    background-color: rgb(255, 255, 255);
     display: flex;
     width: 990px;
     height: auto;
@@ -41,6 +40,7 @@
         flex-direction: column;
         flex-wrap: wrap;
         margin: 30px 60px 0px 30px;
+        z-index: 1;
         
      &_item{
          width: 900px;
@@ -92,6 +92,83 @@
 
   }
 
+&_stickyui{
+    top: 40px;
+    z-index: 1;
+    width: 300px;
+    
+&_content{
+    font-family: 'Gilroy', sans-serif;
+    border-radius: 40px;
+    border: 5px solid #007f5f;
+    height: auto;
+    width: 308px;
+    box-shadow: -10px 10px #fdb833;
+    
+    
+    >h1{
+        font-size: 20x;
+        margin-bottom: 10px;
+        padding: 20px 10px;
+        width: 300px;
+        border-radius: 25px 25px 0px 0px;
+        background-color: $spanish_viridians;
+        font-weight: lighter;
+        color: white;
+    
+    } 
+    >h2{
+        font-size: 30px;
+        padding: 0px 10px;
+        width: 300px;
+        color: $spanish_viridians;
+         
+    }
+    >h6{
+        font-size: 15px;
+        font-weight: lighter;
+        margin-bottom: 30px;
+        padding: 0px 10px;
+        width: 300px;
+        color: #cccccc;
+    }
+    >h3{
+        font-size: 30px;
+        padding: 0px 10px;
+        width: 300px;
+        color: $spanish_viridians;
+    }
+    >ul{
+       list-style-type: none;
+       position: relative;
+       padding: 0px 30px 20px 50px;
+       width: 300px;
+       
+        >li{
+            margin: 0px;
+            font-family: 'Montserrat', sans-serif;
+            
+            >a{
+                display: block;
+                color: #7f7f7f;
+                text-align: left;
+                padding: 5px 0px;
+                text-decoration: none;
+                font-size: 15px;
+                transition: all 300ms ease-in-out;
+            
+    }
+            >a:hover{
+                color: $spanish_viridians;
+                margin-left: 5px;
+    }
+    }  
+    }
+
+
+}
+}
+}
 //stickui
 .wrapper{
     display: flex;
@@ -109,13 +186,15 @@ padding-top: 50px;
 align-self: flex-start;
 padding-right: 50px;
 }
-}
 
 //animation
-[aos="fade"].aos-animate{
-    opacity: 0;
-    transition-property: opacity;
-}
-[aos="fade"]{
-    opacity: 1;
-}
+@keyframes anim1 {
+        from {
+          transform: translateX(100px);
+          opacity: 0;
+        }
+        to  {
+          transform: translateX(0);
+          opacity: 1;
+        }
+      }
