--- a/scss/style.css
+++ b/scss/style.css
@@ -440,12 +440,12 @@ html {
 .Handouts_title {
   margin: 20px 0px 0px 40px;
   position: static;
-  z-index: 1;
+  z-index: -1;
 }
 
 .Handouts_title > h1 {
   font-family: 'Gilroy', sans-serif;
-  font-size: 100px;
+  font-size: 90px;
   color: #007f5f;
 }
 
@@ -458,7 +458,6 @@ html {
 }
 
 .Handouts_container {
-  background-color: white;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -479,6 +478,7 @@ html {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   margin: 30px 60px 0px 30px;
+  z-index: 1;
 }
 
 .Handouts_container_content_item {
@@ -531,7 +531,85 @@ html {
           transform: translate(5px, -5px);
 }
 
-.Handouts .wrapper {
+.Handouts_stickyui {
+  top: 40px;
+  z-index: 1;
+  width: 300px;
+}
+
+.Handouts_stickyui_content {
+  font-family: 'Gilroy', sans-serif;
+  border-radius: 40px;
+  border: 5px solid #007f5f;
+  height: auto;
+  width: 308px;
+  -webkit-box-shadow: -10px 10px #fdb833;
+          box-shadow: -10px 10px #fdb833;
+}
+
+.Handouts_stickyui_content > h1 {
+  font-size: 20x;
+  margin-bottom: 10px;
+  padding: 20px 10px;
+  width: 300px;
+  border-radius: 25px 25px 0px 0px;
+  background-color: #007f5f;
+  font-weight: lighter;
+  color: white;
+}
+
+.Handouts_stickyui_content > h2 {
+  font-size: 30px;
+  padding: 0px 10px;
+  width: 300px;
+  color: #007f5f;
+}
+
+.Handouts_stickyui_content > h6 {
+  font-size: 15px;
+  font-weight: lighter;
+  margin-bottom: 30px;
+  padding: 0px 10px;
+  width: 300px;
+  color: #cccccc;
+}
+
+.Handouts_stickyui_content > h3 {
+  font-size: 30px;
+  padding: 0px 10px;
+  width: 300px;
+  color: #007f5f;
+}
+
+.Handouts_stickyui_content > ul {
+  list-style-type: none;
+  position: relative;
+  padding: 0px 30px 20px 50px;
+  width: 300px;
+}
+
+.Handouts_stickyui_content > ul > li {
+  margin: 0px;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.Handouts_stickyui_content > ul > li > a {
+  display: block;
+  color: #7f7f7f;
+  text-align: left;
+  padding: 5px 0px;
+  text-decoration: none;
+  font-size: 15px;
+  -webkit-transition: all 300ms ease-in-out;
+  transition: all 300ms ease-in-out;
+}
+
+.Handouts_stickyui_content > ul > li > a:hover {
+  color: #007f5f;
+  margin-left: 5px;
+}
+
+.wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -541,7 +619,7 @@ html {
   width: 1200px;
 }
 
-.Handouts .maincontent {
+.maincontent {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -551,7 +629,7 @@ html {
           flex-direction: column;
 }
 
-.Handouts .sidebar {
+.sidebar {
   position: -webkit-sticky;
   position: sticky;
   top: 5%;
@@ -561,14 +639,30 @@ html {
   padding-right: 50px;
 }
 
-[aos="fade"].aos-animate {
-  opacity: 0;
-  -webkit-transition-property: opacity;
-  transition-property: opacity;
+@-webkit-keyframes anim1 {
+  from {
+    -webkit-transform: translateX(100px);
+            transform: translateX(100px);
+    opacity: 0;
+  }
+  to {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+    opacity: 1;
+  }
 }
 
-[aos="fade"] {
-  opacity: 1;
+@keyframes anim1 {
+  from {
+    -webkit-transform: translateX(100px);
+            transform: translateX(100px);
+    opacity: 0;
+  }
+  to {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+    opacity: 1;
+  }
 }
 
 @font-face {
